# top-words-histogram

./: .gitignore  CMakeLists.txt
qml/: Main.qml
src/: main.cpp
